# lumen-docs

./: README.md  pyproject.toml  tasks.txt
admin_material/: apps.py  models.py
lumen/: __init__.py  __main__.py  cli.py  model.py
lumen/commands/: __init__.py  dqa.py  init.py  qa.py  summarize.py  transcribe.py  translate.py  vqa.py
lumen/tests/: __init__.py
lumen/utils/: __init__.py  parser.py  prettify.py  process.py
