[tool.poetry]
name = "lumen-docs"
version = "0.1.0"
description = "Redesign of Django admin interface using MD Bootstrap"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lumen"}]
homepage = "https://github.com/youzarsiph/lumen-docs/"
repository = "https://github.com/youzarsiph/lumen-docs/"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
huggingface-hub = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
